// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HomeCine does not return es content for mx 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "referer": "https://www3.homecine.to/el-camino-una-pelicula-de-breaking-bad",
      "title": "El Camino: Una película de Breaking Bad (2019)",
    },
    "url": "https://fastream.to/embed-kc5dvcy34x8p.html",
  },
]
`;

exports[`HomeCine does not return mx content for es 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "referer": "https://www3.homecine.to/el-camino-una-pelicula-de-breaking-bad",
      "title": "El Camino: Una película de Breaking Bad (2019)",
    },
    "url": "https://fastream.to/embed-c9tmfzsbfj0z.html",
  },
]
`;

exports[`HomeCine handle el camino 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "referer": "https://www3.homecine.to/el-camino-una-pelicula-de-breaking-bad",
      "title": "El Camino: Una película de Breaking Bad (2019)",
    },
    "url": "https://fastream.to/embed-kc5dvcy34x8p.html",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "referer": "https://www3.homecine.to/el-camino-una-pelicula-de-breaking-bad",
      "title": "El Camino: Una película de Breaking Bad (2019)",
    },
    "url": "https://fastream.to/embed-c9tmfzsbfj0z.html",
  },
]
`;

exports[`HomeCine handle here today 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "referer": "https://www3.homecine.to/here-today",
      "title": "Aquí y ahora (2021)",
    },
    "url": "https://fastream.to/embed-u99qvlpbjfd5.html",
  },
]
`;

exports[`HomeCine handle marvel - the punisher 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "referer": "https://www3.homecine.to/series/marvel-the-punisher",
      "title": "Marvel - The Punisher S01E01",
    },
    "url": "https://fastream.to/embed-ujq9uojoftog.html",
  },
]
`;

exports[`HomeCine handle walking dead s1e1 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "referer": "https://www3.homecine.to/series/serie-the-walking-dead-cualquier-idioma",
      "title": "The Walking Dead S01E01",
    },
    "url": "https://fastream.to/embed-nkztf1memuca.html",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "referer": "https://www3.homecine.to/series/serie-the-walking-dead-cualquier-idioma",
      "title": "The Walking Dead S01E01",
    },
    "url": "https://fastream.to/embed-5bv96pdifz0b.html",
  },
]
`;
